<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfigActivity"
    android:background="?attr/backgroundColor">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/config_tittle"
        android:textColor="?attr/primaryTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar" />

    <RadioGroup
        android:id="@+id/radioGroup_config"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10">


        <RadioButton
            android:id="@+id/radioButton_Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="?attr/colorAccent"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/config_light"
            android:textColor="?attr/primaryTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioButton_Dark" />

        <RadioButton
            android:id="@+id/radioButton_Dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="?attr/colorAccent"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/config_dark"
            android:textColor="?attr/primaryTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_bar" />
    </RadioGroup>

    <Button
        android:id="@+id/button_aply_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_start"
        android:fontFamily="@font/roboto_medium"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/config_apply"
        android:textColor="?attr/primaryTextColor"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_config" />

</androidx.constraintlayout.widget.ConstraintLayout>